# shopsage

./: .gitignore  Anchor.toml  Cargo.toml  README.md  app.json  index.js  package-lock.json  package.json  test-wallet-seed.md
android/: settings.gradle
android/app/: build.gradle
app/: _layout.tsx  complete-profile.tsx  index.tsx  welcome.tsx
app/(auth)/: _layout.tsx  connect-wallet.tsx
app/(call)/: _layout.tsx  video-call.tsx
app/(expert)/: _layout.tsx  detail.tsx  list.tsx  profile-management.tsx  registration.tsx
app/(profile)/: _layout.tsx  expert-onboarding.tsx  home.tsx  profile.tsx  shopper-onboarding.tsx
app/(shopper)/: _layout.tsx  sessions.tsx
app/(tabs)/: _layout.tsx  explore.tsx
components/: CustomAlert.tsx  CustomHeader.tsx  ProfileSetup.tsx  RoleManager.tsx  RoleSwitcher.tsx
components/account/: account-ui-balance.tsx
components/auth/: auth-provider.tsx
components/cluster/: cluster-provider.tsx
components/common/: ErrorBoundary.tsx  GradientHeader.tsx  LoadingSpinner.tsx
components/payments/: PreCallPayment.tsx
components/session/: SessionCreationForm.tsx
components/settings/: settings-app-config.tsx
components/solana/: use-authorization.tsx  use-mobile-wallet.tsx
components/ui/: ui-icon-symbol.tsx
config/: environment.ts
constants/: app-config.ts  programs.ts
contexts/: AuthContext.tsx
data/: mockData.ts
hooks/: useRoleNavigation.ts
ios/shopsagemobile.xcworkspace/: contents.xcworkspacedata
migration/src/: m20250726_092311_create_initial_schema.rs  m20250804_000000_create_sessions_table.rs
services/: authService.ts  chatService.ts  dataProvider.ts  expertProgramService.ts  expertService.ts  integratedSessionService.ts  localSessionStorage.ts  paymentService.ts  sessionService.ts  sessionStateSyncService.ts  transactionMonitorService.ts  userService.ts  videoCallService.ts  websocketService.ts
shopsage-backend/: postman_collection.json
shopsage-backend/src/: config.rs
shopsage-expert/: Cargo.toml
shopsage-expert/src/: lib.rs
shopsage-mobile/: .gitignore  README.md  app.json  package.json  polyfill.js
shopsage-mobile/app/: complete-profile.tsx  welcome.tsx
shopsage-mobile/components/: Collapsible.tsx  CustomAlert.tsx  CustomHeader.tsx  app-dropdown.tsx  app-providers.tsx
shopsage-mobile/config/: environment.ts
shopsage-mobile/constants/: programs.ts
shopsage-mobile/hooks/: useIntegratedSession.ts  useRoleNavigation.ts
shopsage-mobile/ios/: Podfile
shopsage-mobile/scripts/: get-account-data.js  get-expert-pda.js  sync-program-ids.js
shopsage-mobile/services/: chatService.ts  dataProvider.ts  expertService.ts  localSessionStorage.ts  sessionProgramService.ts  userService.ts  videoCallService.ts  websocketService.ts
shopsage-mobile/store/: index.ts
shopsage-mobile/utils/: blockchainErrorHandler.ts  dataTransforms.ts  errorHandler.ts  (+3 more)
shopsage-payment/: Cargo.toml
shopsage-payment/src/: lib.rs
shopsage-programs/: .gitignore  Cargo.toml  tsconfig.json
shopsage-session/: Cargo.toml
shopsage-session/src/: lib.rs
src/: database.rs  main.rs
store/: index.ts
types/: auth.ts  payments.ts
utils/: appInitializer.ts  authStateManager.ts  dataTransforms.ts  nativeModuleFallbacks.ts  permissions.ts  solana.ts  videoCallNavigation.ts
(+77 files in other folders)
