[package]
name = "shopsage-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shopsage-backend"
path = "src/main.rs"

[dependencies]
# Web framework - latest versions
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.20", features = ["full"] }

# Database - Sea-ORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-rust_decimal"] }
sea-orm-migration = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT authentication
jsonwebtoken = "8.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal numbers for financial calculations
rust_decimal = { version = "1.0", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }

# HTTP client for Solana RPC calls
reqwest = { version = "0.11", features = ["json"] }

# Solana integration
solana-sdk = "2.2.20"
solana-client = "2.2.20"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Cryptography and security
base64 = "0.21"
rand = "0.8"
lazy_static = "1.5"
ed25519-dalek = "2.0"
bs58 = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"