[package]
name = "shopsage-payment"
version = "0.1.0"
description = "ShopSage Payment Processing and Commission Distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shopsage_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
