[package]
name = "shopsage-session"
version = "0.1.0"
description = "ShopSage Session Management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shopsage_session"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
